[workspace]
members = [
  "willow-desktop",
  "willow-messenger",
  "willow-protocol",
  "willow-raqote",
  "willow-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
raqote = { version = "0.8.2", default-features = false }
slab = "0.4"
willow-protocol = { path = "willow-protocol" }
willow-raqote = { path = "willow-raqote" }
willow-server = { path = "willow-server" }
