[package]
name = "willow-desktop"
version = { workspace = true }
edition = { workspace = true }
license = "AGPL-3.0-or-later"

[dependencies]
raqote = { workspace = true }
slab = { workspace = true }
softbuffer = "0.3"
willow-raqote = { workspace = true }
willow-react = { workspace = true }
willow-server = { workspace = true }
winit = "0.28"
